--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-themes": "^0.3.0",
@@ -50,6 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
