--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-intl": "^6.8.7",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
