--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,21 @@
-module.exports = {
-  parser: "@typescript-eslint/parser", // Specifies the ESLint parser
-  parserOptions: {
-    ecmaVersion: 2020, // Allows for the parsing of modern ECMAScript features
-    sourceType: "module", // Allows for the use of imports
-    ecmaFeatures: {
-      jsx: true, // Allows for the parsing of JSX
-    },
+{
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-  extends: [
-    "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
-    "plugin:react/recommended", // Uses the recommended rules from @eslint-plugin-react
-    "plugin:react-hooks/recommended", // Uses the recommended rules for React hooks
-    "plugin:jsx-a11y/recommended", // Accessibility rules for JSX
-    "prettier", // Enables eslint-config-prettier to disable ESLint rules that might conflict with prettier
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier"
   ],
-  rules: {
+  "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-empty-interface": "off",
-    // Add other rules or disable non-critical ones as needed
-  },
-};
+    "@typescript-eslint/no-empty-interface": "off"
+  }
+}
