--- a/package.json
+++ b/package.json
@@ -65,12 +65,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.x.x",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-    "eslint": "^8.x.x"
+    "typescript": "^5",
     "eslint-config-prettier": "^9.x.x",
     "eslint-plugin-react": "^7.x.x",
     "eslint-plugin-react-hooks": "^4.x.x",
